module-loader/test-need-large-needless.out
file:///Users/gvwilson/stjs/module-loader/test-need-large-needless.js:1
import need from './need.js'
       ^^^^
SyntaxError: The requested module './need.js' does not provide an export named 'default'
    at ModuleJob._instantiate (internal/modules/esm/module_job.js:98:21)
    at async ModuleJob.run (internal/modules/esm/module_job.js:143:5)
    at async Loader.import (internal/modules/esm/loader.js:165:24)
    at async Object.loadESM (internal/process/esm_loader.js:68:5)
